# Rust-Widgets

./: .gitignore  Cargo.toml  README.md  install-local.sh
.github/workflows/: release.yml
crates/widget-core/: Cargo.toml
crates/widget-core/src/: config.rs  css.rs  lib.rs  position.rs  widget.rs
crates/widget-poll/: Cargo.toml
crates/widget-poll/src/: battery.rs  cpu.rs  disk.rs  lib.rs  memory.rs  network.rs  thermal.rs
crates/widgets/control-center/: Cargo.toml
crates/widgets/control-center/src/: animation.rs  config.rs  css.rs  main.rs  media.rs  sliders.rs  stats.rs  style.css  toggles.rs
crates/widgets/media-player/: Cargo.toml
crates/widgets/media-player/src/: animation.rs  config.rs  css.rs  main.rs  style.css
crates/widgets/stats-popup/: Cargo.toml
crates/widgets/stats-popup/src/: animation.rs  config.rs  css.rs  main.rs  style.css
crates/widgets/volume-control/: Cargo.toml
crates/widgets/volume-control/src/: audio.rs  config.rs  config.toml  css.rs  main.rs  style.css
themes/: default.css
widget-cli/: Cargo.toml
widget-cli/src/: main.rs
