[package]
name = "widget-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core framework for rust-widgets"

[dependencies]
gtk4.workspace = true
gtk4-layer-shell.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
tracing.workspace = true
