[package]
name = "media-player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Media player widget with album art and controls"

[[bin]]
name = "rw-media"
path = "src/main.rs"

[dependencies]
widget-core = { path = "../../widget-core" }
widget-poll = { path = "../../widget-poll" }
gtk4.workspace = true
gtk4-layer-shell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
serde.workspace = true
dirs = "5"
